--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,9 @@
     "description": "Ticketmaster plugin for CakePHP",
     "type": "cakephp-plugin",
     "license": "MIT",
-    "require": {
-        "cakephp/cakephp": "3.5.0",
+	"version":"1.0.0",
+    "require": {	
+        "cakephp/cakephp": "3.5.0"
     },
     "autoload": {
         "psr-4": {
